优化各种逻辑，支持从html反解析到bbcode

--- a/src/bbcode.html
+++ b/src/bbcode.html
@@ -67,7 +67,7 @@
       str = filterXSS(str);
     }
 
-    document.getElementById("result").innerHTML = bbcode2html(str);
+    document.getElementById("result").innerHTML = BBCODE.bbcode2html(str);
   }
 </script>
 </body>
