--- a/src/bbcode.html
+++ b/src/bbcode.html
@@ -4,27 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>BBCODE Parser</title>
-    <style>
-        .mask {
-            display: inline-block;
-        }
-        .mask:not(:hover),.mask:not(:hover) * {
-            border: none;
-            background: rgba(0,0,0,1) !important;
-            color: black;
-        }
-        .dice {
-            display: inline-block;
-            width: fit-content;
-            height: 25px;
-            border: skyblue solid 2px;
-            box-sizing: border-box;
-            background-color: burlywood;
-            color: dimgray;
-            overflow: hidden;
-            white-space: nowrap;
-        }
-    </style>
+    <link rel="stylesheet" type="text/css" href="contents.css">
 </head>
 <body>
 <div style="display: flex;">
